Revert "checkpointing : adding support for groovy testing"
This reverts commit fb16dcd88acf802c4780c01a7c2f198110f1f466.